--- a/OnlineStore/OnlineStore.csproj
+++ b/OnlineStore/OnlineStore.csproj
@@ -64,4 +64,8 @@
     <Folder Include="wwwroot\image\product\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="Areas\Customer\Views\Home\Details.cshtml" />
+  </ItemGroup>
+
 </Project>
